[project]
name = "tsunami-mf"
version = "0.1.0"
description = "Multi-fidelity tsunami prediction: max height, arrival time, eta"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "h5py",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "optuna",
    "mlflow",
    # physicsnemo is an NVIDIA package — install separately if not on PyPI:
    # pip install physicsnemo  OR
    # pip install --extra-index-url https://pypi.ngc.nvidia.com physicsnemo
    "nvidia-physicsnemo[cu12,nn-extras]",
    "nvidia-physicsnemo-sym"
]

[tool.hatch.build.targets.wheel]
packages = ["tsunami_mf"]

[tool.uv]
# Uncomment if physicsnemo requires NVIDIA's index:
extra-index-url = ["https://pypi.nvidia.com"]

# This tells uv to provide torch when building the physicsnemo wheel
[tool.uv.extra-build-dependencies]
nvidia-physicsnemo = ["torch"]
"nvidia-physicsnemo-sym" = ["torch"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
